Bug 1079367 - Fix pointer being set to nullptr too early in HttpChannelParent. r=jduell